[package]
name = "cloudevents-axum"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
chrono = "0.4.19"
cloudevents-sdk = { git = "https://github.com/andrewwebber/sdk-rust.git", branch = "http", features = ["axum", "reqwest"]}
reqwest = "0.11.4"


[dependencies]
async-trait = "0.1.51"
axum = "0.2.3"
cloudevents-sdk = { git = "https://github.com/andrewwebber/sdk-rust.git", branch = "http", features = ["axum"]}
futures = "0.3.17"
http = "0.2.4"
http-body = "0.4.3"
serde = "1.0.130"
serde_json = "1.0.67"
tokio = { version = "1.10.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tower-http = { version = "0.1", features = ["trace"] }
